# foundationpose_cpp

./: .gitignore  .gitmodules  CLAUDE.md  CMakeLists.txt  README.md  README_cn.md
detection_6d_foundationpose/src/mesh_loader/: assimp_mesh_loader.cpp
python_bindings/: CMakeLists.txt  demo_mustard.py  pyproject.toml  setup.py
python_bindings/foundationpose_cpp/: __init__.py  model.py
python_bindings/src/: bindings.cpp
simple_tests/src/: test_foundationpose.cpp
tools/: cvt_onnx2trt.bash
